--- a/3.用户输入绑定/index.html
+++ b/3.用户输入绑定/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link href="..//css/style.css" rel="stylesheet">
-    <title>1.声明式渲染</title>
+    <title>用户输入绑定</title>
 </head>
+
 <body>
     <div id="myApp">
-        {{message}}
+        <p>最喜欢的游戏:{{mygame}}</p>
+        <input v-model="mygame">
     </div>
     <script>
-        var myApp=new Vue({
-            el: '#myApp',
+        var myApp = new Vue({
+            el: "#myApp",
             data: {
-                message: 'hello Vue.js world'
+                mygame: '超级马里奥'
             }
-        });
-    </script> 
+        })
+    </script>
 </body>
+
 </html>
